Final changes for dto